force-app/main/default/objects/Web_Service_Setting__mdt/Web_Service_Setting__mdt.object-meta.xml
<CustomObject>
    <description
  >One record per outbound web service call. Path__c is a template whose {placeholders} are merged at runtime from the record ({apiKey}) and from the calling code (e.g. {year}), so query parameters can be changed by an admin without a code change. Read only by internal/system-context code, never by guest-invoked code.</description>
    <label>Web Service Setting</label>
    <pluralLabel>Web Service Settings</pluralLabel>
</CustomObject>