force-app/main/default/objects/Web_Service_Setting__mdt/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <description
  >Secret merged into the {apiKey} placeholder of Path__c. Populate in the org after deployment; never commit a real key. Redeploying this record from source will blank it.</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>