force-app/main/default/objects/Web_Service_Setting__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description
  >Developer name of the Named Credential that allow-lists the host; the request endpoint becomes callout:&lt;this&gt;&lt;Path__c&gt;.</description>
    <label>Named Credential</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>