force-app/main/default/objects/Web_Service_Setting__mdt/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description
  >Path and query string appended to the Named Credential, with {placeholders} merged at runtime. {apiKey} is filled from this record; every other placeholder (e.g. {year}) must be supplied by the calling code. Values are URL-encoded when merged. Example: /holidays?api_key={apiKey}&amp;country=ZA&amp;year={year}&amp;type=national</description>
    <label>Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>