force-app/main/default/objects/Web_Service_Setting__mdt/fields/Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Ms__c</fullName>
    <description
  >Callout timeout in milliseconds (max 120000). Defaults to 30000 when blank.</description>
    <label>Timeout (ms)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>